HTML integration